# fastapi-uk

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  server.py
app/: dependencies.py
app/controller/: __init__.py  module_controller.py
app/models/: __init__.py  answer.py  mark.py  module.py  question.py  study_manual.py  user.py
app/repository/: __init__.py  module_repo.py
app/schemas/: __init__.py  module_schema.py  question.py  study_manual.py
app/service/: module_service.py
core/: config.py  database.py
core/base_model/: timestamp_model.py
core/db/: __init__.py  session.py  transactional.py
core/di/: __init__.py
core/enum/: propagation.py  role.py  section.py
core/middlewares/: __init__.py
migrations/: env.py
migrations/versions/: 4e17423c4859_init_table.py  6b71e4e448f2_create_some_table.py  bc4b88a7f8e6_revision_entity.py  d280bd0bc76c_create_user_table.py
